@@ -18,6 +18,9 @@ link:pgm-daemon.html[daemon]::
 link:pgm-gsql.html[gsql]::
 	Administrative interface to idle database.
 
+link:pgm-ScanTrackingIds.html[ScanTrackingIds]::
+	Rescan all changes after configuring trackingids.
+
 version::
   Display the release version of Gerrit Code Review.
 
